# NEXUS

./: .env.example  .gitignore  DEVPOST.md  README.md  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  action.py  analyze.py  connect.py  discovery.py  orchestrator.py
backend/app/core/: agent_manager.py  auth.py  config.py  database.py  deps.py  google_auth.py  websocket.py
backend/app/db/: neo4j_schema.cypher
backend/app/integrations/: __init__.py  google_calendar.py  neo4j_client.py  reka_client.py  tavily_client.py  yutori_client.py
backend/app/models/: __init__.py  agent_event.py  agent_state.py  chat.py  event.py  feedback.py  message.py  person.py  profile.py
backend/app/routers/: agent_control.py  auth.py  chat.py  events.py  feedback.py  graph.py  messages.py  people.py  profile.py  targets.py  webhooks.py
backend/app/services/: deduplication.py  graph_service.py  linkedin_analyzer.py  message_generator.py  preference_engine.py  scoring.py
backend/scripts/: scrape_devpost.py  scrape_devpost_api.py
backend/tests/: conftest.py
backend/tests/agents/: test_action_agent.py  test_analyze_agent.py  test_connect_agent.py  test_discovery_agent.py
backend/tests/contract/: test_neo4j_client.py  test_reka_client.py  test_tavily_client.py  test_yutori_client.py
backend/tests/e2e/: test_feedback_cycle.py  test_full_cycle_replay.py  test_target_flow.py
backend/tests/fixtures/: events_sf_sample.json
backend/tests/orchestrator/: test_routing_rules.py  test_safety_modes.py  (+1 more)
(+52 files in other folders)
